# Sposem2zad1

./: Makefile  README.md  demo_compiler_chain_s390x.sh  run_test1_from_src_s390x.sh  scheduler.c  spo_task1_v18  test1_runtime.c  test_s390x.sh  workload.h
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/: .gitignore  CMakeLists.txt  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yml  lex.yy.c
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/build_local/: CMakeCache.txt
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/scripts/: codegen.sh  render_cfg.bat  render_cfg.ps1  render_cfg.sh  visualize.sh
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/src/ast/: ast.c  ast.h
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/src/cfg/: cfg.c  cfg.h  main.c
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/src/codegen/: codegen.h  main.c
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/src/lexer/: lexer.l
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/src/parser/: main.c  parser.y
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/src/semantic/: analyzer.c  analyzer.h  main.c  types.c  types.h
_inspect_source2ast/source2ast-41e8146cc0107ad31cf76932afc772daa74b4e0c/tests/ok/: test2.src  test3.src  test4.src  test5.src  test6.src  test7.src
demo_inputs/: test1.src  test2.src  test3.src
